Bugs Fixing